--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://Efrain-F.github.io/AnimatedWebsite" ,
+  "homepage":"https://Efrain-F.github.io/ANIMATED-WEBSITE-MODERN" ,
   "name": "websitemoderm",
   "private": true,
   "version": "0.0.0",
